--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,6 +9,12 @@
 </head>
 <body>
 
+  <nav>
+    <a href="/">Accueil</a>
+    <a href="/projets">Projets</a>
+    <a href="">Blog</a>
+  </nav>
+
   {{{body}}}
 
   <script src="/javascripts/script.js"></script>
