--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,8 +1,201 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+/* Sur tous types d'écrans orientés verticalement */
+@media all
+{
+
+    body {
+      padding: 10px;
+      font: 14px;
+      font-family: 'Source Code Pro', monospace;
+      background-color: whitesmoke;
+    }
+
+    a {
+      color: black;
+    }
+
+    .navbar {
+      display: flex;
+      flex-direction: column;
+      background-color: whitesmoke;
+      position: fixed;
+      width: 19em;
+      height: 40em;
+      padding-right: 1em;
+    }
+
+    .bea {
+      padding-left: 30%;
+      padding-top: 10%;
+    }
+
+    h1 {
+      border-bottom: 2px solid black;
+      padding-bottom: 8px;
+    }
+
+    .nav-item {
+      padding-left: 30%;
+      padding-top: 5px;
+      padding-bottom: 10px;
+    }
+
+    .item:hover {
+      background-color: yellow;
+      font-size: 28px;
+    }
+
+    .content {
+      display: flex;
+      background-color: whitesmoke;
+      flex-direction: row-reverse;
+      padding-left: 20.5em;
+    }
+
+    .page {
+      width: 80em;
+    }
+
+    .footer {
+      padding-top: 90%;
+    }
+
+    .sociaux {
+      border-top: 2px solid black;
+      border-bottom: 2px solid black;
+      padding-top: 5%;
+      padding-bottom: 5%;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding-right: 0em;
+    }
+
+    .sociaux-logo {
+      padding-left: 0.5em;
+      padding-right: 0.5em;
+    }
+
+    .phrase {
+      font-size: 8px;
+    }
+
+    .logo-item {
+      font-size: 20px;
+    }
+
+    .logo {
+      padding-right: 1em;
+    }
+
+    .logo:hover {
+      color: yellow;
+      font-size: 30px;
+    }
+
 }
 
-a {
-  color: #00B7FF;
+/* Nouvelles règles si la fenêtre fait au plus 1024px de large */
+@media screen and (max-width: 600px)
+{
+
+    body {
+      padding: 10px;
+      font: 14px;
+      font-family: 'Source Code Pro', monospace;
+      background-color: whitesmoke;
+    }
+
+    a {
+      color: black;
+    }
+
+    .navbar {
+      background-color: whitesmoke;
+      position: fixed;
+      width: 90%;
+      height: 13em;
+      padding-right: 0em;
+    }
+
+    .bea {
+      padding-right: 0em;
+      padding-left: 0%;
+      padding-top: 1px;
+      padding-bottom: 1px;
+    }
+
+    h1 {
+      border-bottom: 1px solid black;
+      border-top: 1px solid black;
+      padding-bottom: 8px;
+      padding-top: 8px;
+      font-size: 26px;
+    }
+
+    nav {
+      display: flex;
+    }
+
+    .nav-item {
+      padding-right: 1em;
+      padding-left: 0%;
+      font-size: 19px;
+    }
+
+    .item:hover {
+      background-color: yellow;
+      font-size: 30px;
+    }
+
+    .content {
+      display: flex;
+      background-color: whitesmoke;
+      flex-direction: column;
+      padding-left: 0em;
+      padding-top: 13em;
+    }
+
+    .page {
+      width: 100%;
+      height: 100%;
+    }
+
+    .footer {
+      padding-top: 0%;
+      font-size: 10px;
+    }
+
+    .sociaux {
+      border-top: 0px solid black;
+      border-bottom: 1px solid black;
+      padding-top: 0%;
+      padding-bottom: 0%;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding-right: 2em;
+    }
+
+    .sociaux-logo {
+      padding-left: 0em;
+      padding-right: 0em;
+    }
+
+    .phrase {
+      font-size: 10px;
+    }
+
+    .logo-item {
+      font-size: 20px;
+    }
+
+    .logo {
+      padding-right: 0em;
+    }
+
+    .logo:hover {
+      color: yellow;
+      font-size: 30px;
+    }
+
 }
