--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,11 @@
-<h1>{{title}}</h1>
-<p>Bienvenue sur le site web de {{title}}</p>
+<div>
+  <p>Bienvenue sur le site web de {{title}}</p>
+</div>
+
+<div>
+  <a href="/credits">
+    Crédits
+  </a>
+</div>
+
+<script src="/javascripts/script.js"></script>
